--- a/app/videos/videos.module.css
+++ b/app/videos/videos.module.css
@@ -46,6 +46,7 @@
     text-align: center;
     color: #EAEAEA;
     padding-bottom: 41px;
+    cursor: pointer;
 }
 
 .line {
@@ -71,6 +72,12 @@
     font-size: 2em;
     text-align: center;
     color: #EAEAEA;
+    cursor: pointer;
+}
+
+.selected {
+    text-decoration: underline #740000;
+   
 }
 
 @media only screen and (max-width:1044px){
