--- a/components/Videos.module.css
+++ b/components/Videos.module.css
@@ -20,14 +20,16 @@
 
 .thumbnail img {
     max-width: 100%;
-    height: 232px;
+    height: auto;
 }
 
 .content {
+    width: 304px;
     order: 2;
     background-color: #3A3A3A;
-    min-height: fit-content;
-    margin-top:-3px;
+    max-height: 100%;
+    height:200px;
+    margin-top: 4px;
 }
 
 .content h3 {
