--- a/pages/reset_password.module.css
+++ b/pages/reset_password.module.css
@@ -15,6 +15,9 @@
 .textContainer h1 {
     font-family: 'Zilla Slab', serif;
     color: #EAEAEA;
+    font-style: normal;
+    font-size: 2em;
+    font-weight: 500;
 }
 
 .formContainer {
@@ -75,4 +78,11 @@
     text-transform: uppercase;
     color: #EAEAEA;
     cursor: pointer;
+}
+
+.errors { 
+    font-family: 'Zilla Slab', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.1em !important;
 }
