--- a/pages/videos.module.css
+++ b/pages/videos.module.css
@@ -1,7 +1,9 @@
 .textContainer {
     background-color: #3A3A3A;
-    min-height: fit-content;
-    padding-top: 1px;   
+    height: fit-content;
+    padding-top: 1px;
+    padding-bottom: 10px;
+
 }
 
 .textContainer h1 {
@@ -30,7 +32,7 @@
     min-height: fit-content;
 }
 
-.years{
+.courses{
     display: flex;
     list-style: none;
     justify-content: center;
@@ -38,7 +40,7 @@
     padding-top:60px;
 }
 
-.years li{
+.courses li{
     font-family: 'Zilla Slab', serif;
     font-style: normal;
     font-weight: 500;
@@ -56,16 +58,19 @@
    
 }
 
-.quarters {
+.years {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
+    padding-top: 20px;
     list-style: none;
     gap: 4%;
-    padding-top: 20px;
 }
 
-.quarters li {
+
+.years li {
+    flex-basis: calc(25% - 4%); 
+    box-sizing: border-box;
     font-family: 'Zilla Slab', serif;
     font-style: normal;
     font-weight: 500;
@@ -75,10 +80,11 @@
     cursor: pointer;
 }
 
-.selected {
+.selectedFolder {
     text-decoration: underline #740000;
    
 }
+
 
 @media only screen and (max-width:1044px){
     .videoContainer {
@@ -92,7 +98,7 @@
         width: 82%; 
     }
 
-    .quarters {
+    .years {
         gap: 10%;
     }
 }
@@ -106,7 +112,7 @@
         width: 80%;
     }
 
-    .years{
+    .courses{
         gap:5%;
     }
    
@@ -115,11 +121,11 @@
        
     }
 
-    .quarters {
+    .years {
         gap: 15%;
     }
 
-    .quarters li {
+    .years li {
         font-size: 1.5em;
     }
     
@@ -129,8 +135,12 @@
     .videoContainer {
         min-height: fit-content;
     }
-}
 
+
+    .courses li{
+        font-size: 1.5em;
+    }
+}
 
 @media only screen and (max-width:468px) {
     .textContainer {
@@ -142,12 +152,12 @@
         padding-right: 30px;
         padding-top: 10px;
     }
-    .years li{
+    .courses li{
       font-size: 1.2em;
     }
 
 
-    .quarters li {
+    .years li {
         font-size: 1.2em;
     }
 
@@ -158,6 +168,9 @@
         min-height: fit-content; 
     }
 
+    .years li {
+        font-size: 1em;
+    }
 
 
 }
