fixed bugs for deployment

--- a/pages/reset_password.module.css
+++ b/pages/reset_password.module.css
@@ -86,3 +86,11 @@
     font-weight: 400;
     font-size: 1.1em !important;
 }
+
+@media only screen and (max-width: 450px) {
+    .formContainer p{
+      
+        font-size: 1em;
+      
+     }
+}
