--- a/pages/forgot_password.module.css
+++ b/pages/forgot_password.module.css
@@ -23,7 +23,7 @@
     justify-content: center;
     border: 1px solid rgba(18,18,18,0.5);
     border-radius: 10px;
-    width: 50%;
+    width: 70%;
 }
 
 .formContainer p{
@@ -40,8 +40,8 @@
 
 .emailInput {
     background: #121212;
-    width:675px;
-    max-width: 70%;
+    width:575px;
+    max-width: 100%;
     height: 30px;
     color: #EAEAEA;
 }
@@ -67,7 +67,6 @@
     max-width: 100%;
     background: #121212;
     border: 1px solid #740000;
-    /* width: 366px; */
     height: 39px;
     font-family: 'Zilla Slab', serif;
     font-style: normal;
@@ -77,4 +76,20 @@
     text-transform: uppercase;
     color: #EAEAEA;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 850px) {
+    .emailInput {
+     
+        width:305px;
+     
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .emailInput {
+     
+        width:205px;
+     
+    }
 }
