fixed login loading bug

--- a/pages/login.module.css
+++ b/pages/login.module.css
@@ -91,7 +91,7 @@
 }
 
 .error{
-    color: #EAEAEA;
+    color: #740000;
     font-family: 'Zilla Slab', serif;
     font-style: normal;
     font-weight: 400;
